remove any ABB relative stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Robotics portfolio</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <link rel="icon" href="assets/apple-icon-57x57.png" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
+    <link rel="icon" href="assets/logo/pro.png" />
     <link rel="stylesheet" href="assets/style.css">
     <meta charset="UTF-8">
 </head>
@@ -11,7 +12,7 @@
 <body>
     <header>
         <a class="logo" href="" rel="home" title="Robotics Portfolio" target="_self">
-            <img src="assets/logo/abb_logo_33px.png" alt="ABB Logo" style="width: 80px; height: 30px; display: inline-block;">
+            <img src="assets/logo/pro.png" alt="ABB Logo" style="width: 50px; height: 50px; display: inline-block;">
        </a>
         <div class="tab"><button class="tablinks" onclick="openRobotType(event, 'Articulated')" id="defaultOpen">Articulated</button><button class="tablinks" onclick="openRobotType(event, 'Collaborative')">Collaborative</button><button class="tablinks" onclick="openRobotType(event, 'Palletizer')">Palletizer</button><button class="tablinks" onclick="openRobotType(event, 'SCARA')">SCARA</button><button class="tablinks" onclick="openRobotType(event, 'Parallel')">Picker</button><button class="tablinks" onclick="openRobotType(event, 'Paint')">Paint</button></div>
     </header>
@@ -41,6 +42,7 @@
             <div style="text-align: center;"><button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
         </div>
     </div>
+    <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for general informational purposes only</div>
     <script type="text/javascript" src="assets/inlineJson.js"></script>
     <script type="text/javascript" src="assets/script.js"></script>
 </body>
