Build the foundation of controllers choices

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <div style="text-align: center;"><button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
         </div>
     </div>
+    <div id="Controllers_Choice">
+        <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5" onclick="show_hide(this)"><label for="IRC5_checkbox"> IRC5</label>
+        <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore" onclick="show_hide(this)"><label for="Omnicore_checkbox"> Omnicore</label>
+    </div>
     <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for general informational purposes only</div>
     <script type="text/javascript" src="assets/inlineJson.js"></script>
     <script type="text/javascript" src="assets/script.js"></script>
