--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Robotics portfolio</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
     <link rel="icon" href="assets/logo/pro.png" />
     <link rel="stylesheet" href="assets/style.css">
     <meta charset="UTF-8">
