--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <title>Robotics portfolio</title>
@@ -37,7 +37,7 @@
         </div>
         <div id="infoWindow">
             <div id="color"></div><h2 id="IRBName"></h2>
-            <div style="text-align: center;"><img id="image" src="" max-height="256px"></div>
+            <div style="text-align: center;"><img id="image" src="" max-height="256px" alt="Industrial Robot"></div>
             <p id="descr">Put your mouse hover the circles in the chart to interact with them !</p>
             <div style="text-align: center;"><button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
         </div>
