--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div id="Controllers_Choice">
         <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5" onclick="show_hide(this)"><label for="IRC5_checkbox"> IRC5</label>
-        <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore" onclick="show_hide(this)"><label for="Omnicore_checkbox"> Omnicore</label>
+        <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore" onclick="show_hide(this)"><label for="Omnicore_checkbox"> OmniCore</label>
     </div>
     <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for general informational purposes only</div>
     <script type="text/javascript" src="assets/inlineJson.js"></script>
