--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <header>
         <a class="logo" href="" rel="home" title="Robotics Portfolio" target="_self">
             <img src="assets/logo/pro.png" alt="ABB Logo" style="width: 50px; height: 50px; display: inline-block;">
-       </a>
-        <div class="tab"><button class="tablinks" onclick="openRobotType(event, 'Articulated')" id="defaultOpen">Articulated</button><button class="tablinks" onclick="openRobotType(event, 'Collaborative')">Collaborative</button><button class="tablinks" onclick="openRobotType(event, 'Palletizer')">Palletizer</button><button class="tablinks" onclick="openRobotType(event, 'SCARA')">SCARA</button><button class="tablinks" onclick="openRobotType(event, 'Parallel')">Picker</button><button class="tablinks" onclick="openRobotType(event, 'Paint')">Paint</button></div>
+        </a>
+        <div class="tab"><button class="tablinks" onclick="openRobotType(event, 'Articulated')"
+                id="defaultOpen">Articulated</button><button class="tablinks"
+                onclick="openRobotType(event, 'Collaborative')">Collaborative</button><button class="tablinks"
+                onclick="openRobotType(event, 'Palletizer')">Palletizer</button><button class="tablinks"
+                onclick="openRobotType(event, 'SCARA')">SCARA</button><button class="tablinks"
+                onclick="openRobotType(event, 'Parallel')">Picker</button><button class="tablinks"
+                onclick="openRobotType(event, 'Paint')">Paint</button></div>
     </header>
     <div id="container">
         <div id="Articulated" class="tabcontent">
@@ -36,19 +42,33 @@
             <div id="chart"><canvas id="myChartPaint"></canvas></div>
         </div>
         <div id="infoWindow">
-            <div id="color"></div><h2 id="IRBName"></h2>
+            <div id="color"></div>
+            <h2 id="IRBName"></h2>
             <div style="text-align: center;"><img id="image" src="" max-height="256px" alt="Industrial Robot"></div>
             <p id="descr">Put your mouse hover the circles in the chart to interact with them !</p>
-            <div style="text-align: center;"><button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
+            <div style="text-align: center;"><button id="MoreContainer" class="More"><a
+                        href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
         </div>
     </div>
     <div id="Controllers_Choice">
-        <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5" onclick="show_hide(this)"><label for="IRC5_checkbox"> IRC5</label>
-        <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore" onclick="show_hide(this)"><label for="Omnicore_checkbox"> OmniCore</label>
+        <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5" onclick="show_hide(this)"><label
+            for="IRC5_checkbox"> IRC5</label>
+        <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore"
+            onclick="show_hide(this)"><label for="Omnicore_checkbox"> OmniCore</label>
     </div>
-    <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for general informational purposes only</div>
+    <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for
+        general informational purposes only</div>
     <script type="text/javascript" src="assets/inlineJson.js"></script>
     <script type="text/javascript" src="assets/script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJPLPJ28PH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DJPLPJ28PH');
+    </script>
 </body>
 
 </html>
