Dot size changed and sort variants

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="infoWindow">
             <div id="color"></div>
             <h2 id="IRBName"></h2>
-            <div style="text-align: center;"><img id="image" src="" max-height="256px" alt="Industrial Robot"></div>
+            <div style="text-align: center;"><img id="image" src="assets/img/IRB8700_thumb.png" max-height="256px" alt="Industrial Robot"></div>
             <p id="descr">Put your mouse hover the circles in the chart to interact with them !</p>
             <div style="text-align: center;"><button id="MoreContainer" class="More"><a
                         href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
