--- a/index.html
+++ b/index.html
@@ -53,17 +53,22 @@
             <div id="chart"><canvas id="myChartPaint"></canvas></div>
         </div>
         <div id="infoWindow">
-            <div id="color"></div>
-            <h2 id="IRBName"></h2>
-            <div style="text-align: center;"><img id="image" src="assets/img/IRB8700_thumb.png" max-height="256px" alt="Industrial Robot"></div>
+            <div>
+                <div id="color"></div>
+                <h2 id="IRBName"></h2>
+            </div>
+            <div style="text-align: center;"><img id="image" src="assets/img/IRB8700_thumb.png" max-height="256px"
+                    alt="Industrial Robot"></div>
             <p id="descr">Put your mouse hover the circles in the chart to interact with them !</p>
-            <div style="text-align: center;"><button id="MoreContainer" class="More"><a
-                        href="https://new.abb.com/products/robotics" id="More">ABB Robotics Website</a></button></div>
+            <div id="supported_controllers"></div>
+            <button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More">ABB
+                    Robotics Website</a></button>
         </div>
+
     </div>
     <div id="Controllers_CheckBox">
-        <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5" onclick="filterByController(this)"><label
-            for="IRC5_checkbox"> IRC5</label>
+        <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5"
+            onclick="filterByController(this)"><label for="IRC5_checkbox"> IRC5</label>
         <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore"
             onclick="filterByController(this)"><label for="Omnicore_checkbox"> OmniCore</label>
     </div>
