--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for
         general informational purposes only</div>
     <script type="text/javascript" src="assets/inlineJson.js"></script>
+    <script type="text/javascript" src="assets/colorsUtils.js"></script>
     <script type="text/javascript" src="assets/script.js"></script>
 </body>
 
