--- a/index.html
+++ b/index.html
@@ -34,24 +34,40 @@
         </div>
     </header>
     <div id="container">
-        <div id="Articulated" class="tabcontent">
-            <div class="chart-container"><canvas id="myChartArticulated"></canvas></div>
+        <div id="chartPanel">
+            <div id="Articulated" class="tabcontent">
+                <div class="chart-container"><canvas id="myChartArticulated"></canvas></div>
+            </div>
+            <div id="SCARA" class="tabcontent">
+                <div class="chart-container"><canvas id="myChartSCARA"></canvas></div>
+            </div>
+            <div id="Collaborative" class="tabcontent">
+                <div class="chart-container"><canvas id="myChartCollaborative"></canvas></div>
+            </div>
+            <div id="Palletizer" class="tabcontent">
+                <div class="chart-container"><canvas id="myChartPalletizer"></canvas></div>
+            </div>
+            <div id="Picker" class="tabcontent">
+                <div class="chart-container"><canvas id="myChartPicker"></canvas></div>
+            </div>
+            <div id="Paint" class="tabcontent">
+                <div class="chart-container"><canvas id="myChartPaint"></canvas></div>
+            </div>
+            <div id="Chart_Tools">
+                <div id="Controllers_CheckBox">
+                    <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5"
+                        onclick="filterByController(this)">
+                    <label for="IRC5_checkbox"> IRC5</label>
+                    <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore"
+                        onclick="filterByController(this)">
+                    <label for="Omnicore_checkbox"> OmniCore</label>
+                </div>
+                <button id="Reset" onclick="resetZoom()">Reset View</button>
+                <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for
+                    general informational purposes only</div>
+            </div>
         </div>
-        <div id="SCARA" class="tabcontent">
-            <div class="chart-container"><canvas id="myChartSCARA"></canvas></div>
-        </div>
-        <div id="Collaborative" class="tabcontent">
-            <div class="chart-container"><canvas id="myChartCollaborative"></canvas></div>
-        </div>
-        <div id="Palletizer" class="tabcontent">
-            <div class="chart-container"><canvas id="myChartPalletizer"></canvas></div>
-        </div>
-        <div id="Picker" class="tabcontent">
-            <div class="chart-container"><canvas id="myChartPicker"></canvas></div>
-        </div>
-        <div id="Paint" class="tabcontent">
-            <div class="chart-container"><canvas id="myChartPaint"></canvas></div>
-        </div>
+        
         <div id="infoWindow">
             <div>
                 <div id="color"></div>
@@ -66,22 +82,13 @@
                     target="_blank">ABB Robotics Website</a></button>
         </div>
     </div>
-    <div id="Controllers_CheckBox">
-        <input id="IRC5_checkbox" type="checkbox" checked="" value="IRC5" name="IRC5"
-            onclick="filterByController(this)">
-        <label for="IRC5_checkbox"> IRC5</label>
-        <input id="Omnicore_checkbox" type="checkbox" checked="" value="Omnicore" name="Omnicore"
-            onclick="filterByController(this)">
-        <label for="Omnicore_checkbox"> OmniCore</label>
-    </div>
-    <div id="Chart_Tools">
-        <button id="Reset" onclick="resetZoom()">Reset View</button>
-    </div>
-    <div id="disclaimer">This website is not affiliated with any company or organization. Information provided is for
-        general informational purposes only</div>
+    
     <script type="text/javascript" src="assets/inlineJson.js"></script>
     <script type="text/javascript" src="assets/colorsUtils.js"></script>
-    <script type="text/javascript" src="assets/script.js"></script>
+    <script type="text/javascript" src="assets/chartUtils.js"></script>
+    <script type="text/javascript" src="assets/dataUtils.js"></script>
+    <script type="text/javascript" src="assets/uiUtils.js"></script>
+    <script type="text/javascript" src="assets/main.js"></script>
 </body>
 
 </html>
