--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="assets/logo/pro.png" />
     <link rel="stylesheet" href="assets/style.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJPLPJ28PH"></script>
     <script>
@@ -24,6 +25,7 @@
         <a class="logo" href="" rel="home" title="Robotics Portfolio" target="_self">
             <img src="assets/logo/pro.png" alt="ABB Logo" style="width: 50px; height: 50px; display: inline-block;">
         </a>
+        <button id="hamburger" onclick="toggleMenu()">☰</button>
         <div id="navigation-bar">
             <button class="tablinks" onclick="openTypeTab(event, 'Articulated')" id="defaultOpen">Articulated</button>
             <button class="tablinks" onclick="openTypeTab(event, 'Collaborative')">Collaborative</button>
