--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             </div>
         </div>
         <div id="infoPanel">
-            <div>
-                <div id="color"></div>
-                <h2 id="IRBName"></h2>
-            </div>
             <div style="text-align: center;">
                 <img id="image" src="assets/img/IRB8700_thumb.png" max-height="256px" alt="Industrial Robot">
+            </div>
+            <div id="RobotTitle">
+                <div id="color"></div>
+                <h2 id="IRBName"></h2>
             </div>
             <p id="descr">Put your mouse hover the circles in the chart to interact with them!</p>
             <div id="supported_controllers"></div>
