chore: Add robot checkbox to secret tools section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 </div>
                 <button id="Reset" onclick="resetZoom()">Reset View</button>
                 <div id="disclaimer">
-                    This website is not affiliated with any company or organization. Information provided is for general informational purposes only
+                    This website is not affiliated with any company or organization. Information provided is for general
+                    informational purposes only
                 </div>
             </div>
         </div>
@@ -83,6 +84,9 @@
             <button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More"
                     target="_blank">ABB Robotics Website</a></button>
         </div>
+        <div id="secret-tools"></div>
+    </div>
+
     </div>
     <script type="text/javascript" src="assets/inlineJson.js"></script>
     <script type="text/javascript" src="assets/colorsUtils.js"></script>
@@ -91,4 +95,5 @@
     <script type="text/javascript" src="assets/uiUtils.js"></script>
     <script type="text/javascript" src="assets/main.js"></script>
 </body>
+
 </html>
