chore: Add Select All checkbox to secret tools section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
             <button id="MoreContainer" class="More"><a href="https://new.abb.com/products/robotics" id="More"
                     target="_blank">ABB Robotics Website</a></button>
         </div>
-        <div id="secret-tools"></div>
+        <div id="secret-tools">
+            <div class="select-all-checkbox">
+                <input type="checkbox" id="selectAll" name="selectAll" checked>
+                <label for="selectAll">Select All</label>
+            </div>
+        </div>
     </div>
 
     </div>
